src/test/ui/const-generics/issues/issue-68615-array.min.stderr
error: `[usize; 0]` is forbidden as the type of a const generic parameter
  --> $DIR/issue-68615-array.rs:6:21
   |
LL | struct Foo<const V: [usize; 0] > {}
   |                     ^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = help: more complex types are supported with `#[feature(const_generics)]`

error: aborting due to previous error

